# Scheduler

./: .gitignore  CMakeLists.txt  build.sh  main.cpp  mainwindow.ui  rebuild.sh  start.sh
backend/: CMakeLists.txt  backend.cpp  backend.h
gui/: ClassesArea.qml  IconButton.qml  NavButton.qml  RulesArea.qml  TeachersArea.qml  main.js  main.qml  resources.qrc
gui/components/: IconButton.qml  NavButton.qml  PrimaryButton.qml  TeacherListElement.qml  TextLine.qml
gui/js/: main.js  teachers.js  utils.js
src/: CMakeLists.txt  main.cpp  shortcuts.cpp
src/cpp/: main.cpp  mainwindow.cpp  shortcuts.cpp
src/cpp/inc/: mainwindow.h
src/qt/: CMakeLists.txt  NavButton.qml  main.js  main.qml
